commit modif adaptation mobile et bug visuel

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ em
 
 #texte1 {
 	font-family: Arial, sans-serif;
+	text-align: justify;
 }
 
 footer {
@@ -265,8 +266,9 @@ left: -5%;
 .containerFlex {
 	display: inline-flex;
 	width: 100%;
-	height: 34vh;
+	height: 367px;
 }
+
 .containerCoordonnesGauche {
 	height: 100%;
 	width: 70%;
